--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "facebook-birthday-cli",
-  "version": "0.4.2",
+  "version": "0.5.2",
   "description": "Never miss out to wish your facebook friends!",
   "main": "built/cli.js",
   "scripts": {
@@ -42,6 +42,7 @@
     "@types/puppeteer": "^1.5.0",
     "chalk": "^2.4.1",
     "clang-format": "^1.2.4",
+    "jest": "^23.6.0",
     "tslint": "^5.10.0",
     "tslint-eslint-rules": "^5.3.1",
     "typescript": "^2.9.2"
